# Albert

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: compiler.hh  context.hh  cpu.hh  function.hh  gpu.hh  library.hh  matrix.hh  network.hh
samples/: network-1.json  network-2.json  object-1.json  object-2.json
unittest/: CMakeLists.txt  main.cc  unittest.hh  utils.cc  utils.hh
